force-app/main/default/objects/zkups__UPSShipmentSpecialServices__c/zkups__UPSShipmentSpecialServices__c.object-meta.xml
<CustomObject>
    <description>UPS Shipment Special Services stores the various shipment level options associated with a UPS shipment. Note, some special services are &quot;package level&quot; and are a part of the UPS Package record</description>
    <label>UPS Shipment Special Services</label>
    <nameField>
        <displayFormat>UPS-SpecialServices-{000000000}</displayFormat>
        <label>UPS Shipment SpecialServices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Shipment Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>