force-app/main/default/objects/zkups__UPSShipmentSpecialServices__c/fields/zkups__Cod__c.field-meta.xml
<CustomField>
    <fullName>zkups__Cod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UPS C.O.D.</label>
    <type>Checkbox</type>
</CustomField>