force-app/main/default/objects/zkups__UPSShipmentSpecialServices__c/fields/zkups__DeliverToAddresseeOnly__c.field-meta.xml
<CustomField>
    <fullName>zkups__DeliverToAddresseeOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver To Addressee Only</label>
    <type>Checkbox</type>
</CustomField>