force-app/main/default/objects/zkups__UPSShipmentSpecialServices__c/fields/zkups__HandlingLength__c.field-meta.xml
<CustomField>
    <fullName>zkups__HandlingLength__c</fullName>
    <label>Handling Length</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>