force-app/main/default/objects/zkups__UPSShipmentSpecialServices__c/fields/zkups__HandlingUnits__c.field-meta.xml
<CustomField>
    <fullName>zkups__HandlingUnits__c</fullName>
    <label>Handling Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>